# ocean-algo

./: .gitignore  Dockerfile  README.md  detect-inputs.sh  eda.py  feed-map.ttl  feed-map.yml  map-inputs.sh  requirements.txt  statistics.py  test_docker.sh  test_eda.py  test_statistics.py  weight-map.ttl
_base/bash/: docker-compose.yaml  entrypoint.sh
_base/python/: docker-compose.yaml
_data/inputs/: algoCustomData.json
amodal-appleseg-rgb/src/: dataset.py  model.py
basic-predictor/: Dockerfile  docker-compose.yaml  entrypoint.sh
basic-predictor/algorithm/: pyproject.toml
basic-predictor/algorithm/src/: main.py
basic-predictor/algorithm/src/implementation/: algorithm.py  estimators.py  utils.py
basic-predictor/algorithm/tests/: test_main.py
count-lines/: entrypoint.sh
data/: map.ttl
data/ddos/: 8f67E08be5dD941a701c2491E814535522c33bC2
eda/: Dockerfile  docker-compose.yaml
eda/algorithm/: .gitignore  pyproject.toml
eda/algorithm/src/: main.py
eda/algorithm/src/implementation/: algorithm.py
eda/algorithm/tests/: test_eda.py  test_main.py
rmlmapper/algorithm/: Dockerfile  feed-map.ttl  feed-map.yml  map-inputs.sh  test-docker.sh  weight-map.yml  weight-sample.csv
rmlpooler/algorithm/: Dockerfile  README.md  env-map.ttl  feed-sample.csv  map-inputs.sh  test-docker.sh  weight-map.ttl  weight-map.yml
timeseries-forecast/: Dockerfile
yolo/: Dockerfile  docker-compose.yaml
yolo/algorithm/: pyproject.toml
yolo/algorithm/src/: main.py
yolo/algorithm/src/implementation/: algorithm.py
yolo/algorithm/tests/: test_main.py
(+16 files in other folders)
