[project]
name = "algorithm"
version = "0.1.0"
description = ""
authors = [{ name = "AgrospAI", email = "<your-name>@udl.cat" }]
requires-python = ">=3.9"
readme = "README.md"
license = { file = "LICENSE" }

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "1.26.0"
pytest = "^8.3.4"
oceanprotocol-job-details = "0.0.9"
scikit-learn = "^1.6.1"
pandas = "^2.2.3"
cloudpickle = "^3.1.1"
orjson = "^3.10.15"

[tool.pytest.ini_options]
pythonpath = ["src"]
