[project]
name = "algorithm"
version = "0.1.0"
description = ""
authors = [{ name = "AgrospAI", email = "<your-name>@udl.cat" }]
requires-python = ">=3.10"
readme = "README.md"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
pytest = "^8.3.4"
oceanprotocol-job-details = "^0.0.5"
opencv-python-headless = "4.11.0.86"
ultralytics = "^8.0"

